@@ -352,6 +352,17 @@ private:
 		 */
 		FLAG_VCD_ON = 0x10000,
 #endif
+		/**
+			If true, vacuous events are automatically
+			dequeued and skipped, and step returns
+			when it finds the next non-vacuous event.
+			This avoids blank events.
+			Default: false
+			Want this to be true for cosim,
+			so that the next_event_time() reported
+			accounts for possibly vacuous events.  
+		 */
+		FLAG_STOP_ON_VACUOUS = 0x40000,
 		/// initial flags
 		FLAGS_DEFAULT = FLAG_CHECK_EXCL | FLAG_SHOW_CAUSE,
 		/**
@@ -1139,6 +1150,10 @@ public:
 		return set_node_time(n, val, this->current_time, f);
 	}
 
+	step_return_type
+	set_node_immediately(const node_index_type, const value_enum,
+		const bool f);
+
 	void
 	unset_node(const node_index_type);
 
@@ -1173,6 +1188,16 @@ public:
 	ostream&
 	dump_breakpoints(ostream&) const;
 
+private:
+	step_return_type
+	execute_immediately(const event_index_type, const time_type&)
+		THROWS_STEP_EXCEPTION;
+
+	step_return_type
+	execute_immediately(const event_type&, const time_type&)
+		THROWS_STEP_EXCEPTION;
+
+public:
 	step_return_type
 	step(void) THROWS_STEP_EXCEPTION;
 
@@ -1311,6 +1336,21 @@ public:
 	dequeue_unstable_events(const bool dq) {
 		if (dq)	flags |= FLAG_UNSTABLE_DEQUEUE;
 		else	flags &= ~FLAG_UNSTABLE_DEQUEUE;
+	}
+
+	void
+	step_over_vacuous_events(void) {
+		flags &= ~FLAG_STOP_ON_VACUOUS;
+	}
+
+	void
+	stop_on_vacuous_events(void) {
+		flags |= FLAG_STOP_ON_VACUOUS;
+	}
+
+	bool
+	stopping_on_vacuous_events(void) const {
+		return flags & FLAG_STOP_ON_VACUOUS;
 	}
 
 	void
