@@ -1,0 +1,44 @@
+# "set-now-01.prsimrc"
+# copy-modified from "reschedule-17.prsimrc"
+# @haco@ invs.haco-c
+
+timing uniform 10
+watchall
+set-now a 0
+time
+queue
+
+echo accelerate b[13] ...
+execute b[13]
+time
+queue
+advance 5
+queue
+
+echo execute[10] now
+execute b[10]
+queue
+time
+
+echo execute[5] now
+execute b[5]
+queue
+time
+
+advance 5
+time
+
+echo execute b[15] now
+execute b[15]
+queue
+time
+
+echo execute b[3] now
+execute b[3]
+queue
+time
+
+echo remaining events
+cycle
+time
+
