@@ -1,0 +1,166 @@
+	0	a : 0
+time: 0
+event queue:
+	10	b[0] : 1	[from a:=0]
+	10	b[1] : 1	[from a:=0]
+	10	b[2] : 1	[from a:=0]
+	10	b[3] : 1	[from a:=0]
+	10	b[4] : 1	[from a:=0]
+	10	b[5] : 1	[from a:=0]
+	10	b[6] : 1	[from a:=0]
+	10	b[7] : 1	[from a:=0]
+	10	b[8] : 1	[from a:=0]
+	10	b[9] : 1	[from a:=0]
+	10	b[10] : 1	[from a:=0]
+	10	b[11] : 1	[from a:=0]
+	10	b[12] : 1	[from a:=0]
+	10	b[13] : 1	[from a:=0]
+	10	b[14] : 1	[from a:=0]
+	10	b[15] : 1	[from a:=0]
+	10	b[16] : 1	[from a:=0]
+	10	b[17] : 1	[from a:=0]
+	10	b[18] : 1	[from a:=0]
+	10	b[19] : 1	[from a:=0]
+accelerate b[13] ... 
+	0	b[13] : 1	[by a:=0]
+time: 0
+event queue:
+	10	b[0] : 1	[from a:=0]
+	10	b[1] : 1	[from a:=0]
+	10	b[2] : 1	[from a:=0]
+	10	b[3] : 1	[from a:=0]
+	10	b[4] : 1	[from a:=0]
+	10	b[5] : 1	[from a:=0]
+	10	b[6] : 1	[from a:=0]
+	10	b[7] : 1	[from a:=0]
+	10	b[8] : 1	[from a:=0]
+	10	b[9] : 1	[from a:=0]
+	10	b[10] : 1	[from a:=0]
+	10	b[11] : 1	[from a:=0]
+	10	b[12] : 1	[from a:=0]
+	10	b[14] : 1	[from a:=0]
+	10	b[15] : 1	[from a:=0]
+	10	b[16] : 1	[from a:=0]
+	10	b[17] : 1	[from a:=0]
+	10	b[18] : 1	[from a:=0]
+	10	b[19] : 1	[from a:=0]
+event queue:
+	10	b[0] : 1	[from a:=0]
+	10	b[1] : 1	[from a:=0]
+	10	b[2] : 1	[from a:=0]
+	10	b[3] : 1	[from a:=0]
+	10	b[4] : 1	[from a:=0]
+	10	b[5] : 1	[from a:=0]
+	10	b[6] : 1	[from a:=0]
+	10	b[7] : 1	[from a:=0]
+	10	b[8] : 1	[from a:=0]
+	10	b[9] : 1	[from a:=0]
+	10	b[10] : 1	[from a:=0]
+	10	b[11] : 1	[from a:=0]
+	10	b[12] : 1	[from a:=0]
+	10	b[14] : 1	[from a:=0]
+	10	b[15] : 1	[from a:=0]
+	10	b[16] : 1	[from a:=0]
+	10	b[17] : 1	[from a:=0]
+	10	b[18] : 1	[from a:=0]
+	10	b[19] : 1	[from a:=0]
+execute[10] now 
+	5	b[10] : 1	[by a:=0]
+event queue:
+	10	b[0] : 1	[from a:=0]
+	10	b[1] : 1	[from a:=0]
+	10	b[2] : 1	[from a:=0]
+	10	b[3] : 1	[from a:=0]
+	10	b[4] : 1	[from a:=0]
+	10	b[5] : 1	[from a:=0]
+	10	b[6] : 1	[from a:=0]
+	10	b[7] : 1	[from a:=0]
+	10	b[8] : 1	[from a:=0]
+	10	b[9] : 1	[from a:=0]
+	10	b[11] : 1	[from a:=0]
+	10	b[12] : 1	[from a:=0]
+	10	b[14] : 1	[from a:=0]
+	10	b[15] : 1	[from a:=0]
+	10	b[16] : 1	[from a:=0]
+	10	b[17] : 1	[from a:=0]
+	10	b[18] : 1	[from a:=0]
+	10	b[19] : 1	[from a:=0]
+time: 5
+execute[5] now 
+	5	b[5] : 1	[by a:=0]
+event queue:
+	10	b[0] : 1	[from a:=0]
+	10	b[1] : 1	[from a:=0]
+	10	b[2] : 1	[from a:=0]
+	10	b[3] : 1	[from a:=0]
+	10	b[4] : 1	[from a:=0]
+	10	b[6] : 1	[from a:=0]
+	10	b[7] : 1	[from a:=0]
+	10	b[8] : 1	[from a:=0]
+	10	b[9] : 1	[from a:=0]
+	10	b[11] : 1	[from a:=0]
+	10	b[12] : 1	[from a:=0]
+	10	b[14] : 1	[from a:=0]
+	10	b[15] : 1	[from a:=0]
+	10	b[16] : 1	[from a:=0]
+	10	b[17] : 1	[from a:=0]
+	10	b[18] : 1	[from a:=0]
+	10	b[19] : 1	[from a:=0]
+time: 5
+time: 10
+execute b[15] now 
+	10	b[15] : 1	[by a:=0]
+event queue:
+	10	b[0] : 1	[from a:=0]
+	10	b[1] : 1	[from a:=0]
+	10	b[2] : 1	[from a:=0]
+	10	b[3] : 1	[from a:=0]
+	10	b[4] : 1	[from a:=0]
+	10	b[6] : 1	[from a:=0]
+	10	b[7] : 1	[from a:=0]
+	10	b[8] : 1	[from a:=0]
+	10	b[9] : 1	[from a:=0]
+	10	b[11] : 1	[from a:=0]
+	10	b[12] : 1	[from a:=0]
+	10	b[14] : 1	[from a:=0]
+	10	b[16] : 1	[from a:=0]
+	10	b[17] : 1	[from a:=0]
+	10	b[18] : 1	[from a:=0]
+	10	b[19] : 1	[from a:=0]
+time: 10
+execute b[3] now 
+	10	b[3] : 1	[by a:=0]
+event queue:
+	10	b[0] : 1	[from a:=0]
+	10	b[1] : 1	[from a:=0]
+	10	b[2] : 1	[from a:=0]
+	10	b[4] : 1	[from a:=0]
+	10	b[6] : 1	[from a:=0]
+	10	b[7] : 1	[from a:=0]
+	10	b[8] : 1	[from a:=0]
+	10	b[9] : 1	[from a:=0]
+	10	b[11] : 1	[from a:=0]
+	10	b[12] : 1	[from a:=0]
+	10	b[14] : 1	[from a:=0]
+	10	b[16] : 1	[from a:=0]
+	10	b[17] : 1	[from a:=0]
+	10	b[18] : 1	[from a:=0]
+	10	b[19] : 1	[from a:=0]
+time: 10
+remaining events 
+	10	b[0] : 1	[by a:=0]
+	10	b[1] : 1	[by a:=0]
+	10	b[2] : 1	[by a:=0]
+	10	b[4] : 1	[by a:=0]
+	10	b[6] : 1	[by a:=0]
+	10	b[7] : 1	[by a:=0]
+	10	b[8] : 1	[by a:=0]
+	10	b[9] : 1	[by a:=0]
+	10	b[11] : 1	[by a:=0]
+	10	b[12] : 1	[by a:=0]
+	10	b[14] : 1	[by a:=0]
+	10	b[16] : 1	[by a:=0]
+	10	b[17] : 1	[by a:=0]
+	10	b[18] : 1	[by a:=0]
+	10	b[19] : 1	[by a:=0]
+time: 10
